# clion-remote-test

./: CMakeLists.txt  main.cpp
4.5/: 4.5.cpp
5_2/: 5.2.cpp  stack_5.2.hpp
6_2/: 6.2.hpp  main.cpp
CMake_test/: CMakeLists.txt  main.cpp
CMake_test/include/: head.h
CMake_test/src/: mul.cpp  sub.cpp
Essential_c++_practice/: CMakeLists.txt
Essential_c++_practice/4.5/: 4.5.h  main.cpp
Essential_c++_practice/5_1/: 5.1.cpp  stack_5.1.hpp
Essential_c++_practice/6_1/: 6.1.hpp
Essential_c++_practice/6_2/: README.txt
src/: div.cpp  test
