cmake_minimum_required(VERSION 3.29)
project(cpp)

set(CMAKE_CXX_STANDARD 11)

add_executable(cpp
        4.5/4.5.h
        4.5/4.5.cpp
        4.5/main.cpp
        5_1/5.1.cpp
        5_1/stack_5.1.hpp
        5_2/5.2.cpp
        5_2/stack_5.2.hpp
        6_1/6.1.hpp
        6_2/6.2.hpp
        6_2/main.cpp
)
