cmake_minimum_required(VERSION 3.29)
project(cpp)

set(CMAKE_CXX_STANDARD 11)

add_executable(cpp
        Essential_c++_practice/4.5/4.5.h
        Essential_c++_practice/4.5/4.5.cpp
        Essential_c++_practice/4.5/main.cpp
        Essential_c++_practice/5_1/5.1.cpp
        Essential_c++_practice/5_1/stack_5.1.hpp
        Essential_c++_practice/5_2/5.2.cpp
        Essential_c++_practice/5_2/stack_5.2.hpp
        Essential_c++_practice/6_1/6.1.hpp
        Essential_c++_practice/6_2/6.2.hpp
        Essential_c++_practice/6_2/main.cpp
)
